--- a/estilos.css
+++ b/estilos.css
@@ -54,6 +54,16 @@ header{
 main{
 }
 
+.logo{
+  height: 233px;
+  margin-top: 89px;
+}
+img{
+  position: fixed;
+  top: 190px;
+  left: 500px;
+}
+
 .sd{
   flex: 1;
   display: flex;
@@ -119,6 +129,14 @@ center{
   text-align: center;
   height: 36px;
   line-height: 27px;
+}
+.bots:hover{
+  border-style: solid;
+  border-color: #cccccc;
+  border-width: 1px 1px 1px 1px;
+  border-radius: 2px;
+  box-shadow: 0px 1px 1px #888888;
+  opacity: 1.0;
 }
 
 
