--- a/estilos.css
+++ b/estilos.css
@@ -96,6 +96,7 @@ img{
   position: fixed;
   top: 325px;
   left: 845px;
+  cursor: pointer;
 }
 
 .botones{
@@ -139,43 +140,60 @@ center{
   opacity: 1.0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.form-control {
-  width: 400px;
-  height: 34px;
-  position: fixed;
-  top: 50;
-  bottom: 350px;
-  right: 0px;
-  left: 400px;
-
+.offer{
+  display: inline-block;
+  line-height: 28px;
+  font-size: small;
+}
+a:visited {
+    color: #609;
 }
 
-.input-group-text{
-  background-image: url("mic.png");
-  background-size: 24px;
-  width: 34px;
-  height: 34px;
+footer{
+  background: #f2f2f2;
+  color: rgba(0,0,0,.54);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+}
+.ec{
+  display: block;
+  text-align: left;
+  color: rgba(0,0,0,.54);
+  font-size: 15px;
   position: fixed;
-  top: 50;
-  bottom: 350px;
-  right: 0px;
-  left: 800px;
-  region-fragment: break;
-
+  top: 595px;
+  left: 30px;
+}
+.linea{
+  margin-top: 2.6rem;
+}
+.ecc{
+  margin-left: 30px;
+  white-space: nowrap;
+  font-size: small;
+}
+.esp{
+  padding-left: 27px;
+  margin: 0 !important;
+}
+.pos{
+  position: fixed;
+  top: 640px;
+  left: 5px;
+}
+.pos2{
+  position: fixed;
+  top: 640px;
+  left: 960px;
+}
+.esp2{
+  padding-left: 27px;
+  margin: 0 !important;
+}
+.ecc2{
+  margin-left: 30px;
+  white-space: nowrap;
+  font-size: small;
 }
